--- a/src/assets/scss/stylesheet.scss
+++ b/src/assets/scss/stylesheet.scss
@@ -1,3 +1,4 @@
+
 /*---------------------Navbar-----------*/
 
 .nav-link {
@@ -7,30 +8,25 @@
   display: flex;
   align-items: start;
 }
-.dropdown,
-.dropdown-center,
-.dropend,
-.dropstart,
-.dropup,
-.dropup-center {
-  position: relative;
-  left: -45px;
-  color: #ffffff;
+.dropdown
+
+ {
+ 
+   color: #ffffff;
+ }
+ .dropdown-menu.show {
+  display: none;
 }
-.navbar > .container,
-.navbar > .container-fluid,
-.navbar > .container-lg,
-.navbar > .container-md,
-.navbar > .container-sm,
-.navbar > .container-xl,
-.navbar > .container-xxl {
-  display: flex;
-  flex-wrap: inherit;
-  align-items: center;
-  justify-content: space-between;
-}
+ .navbar > .container,
+ .navbar > .container-fluid
+  {
+   display: flex;
+   flex-wrap: inherit;
+   align-items: center;
+   justify-content: space-between;
+ }
 .bg-primary {
-  background-color: bg-primary;
+ 
 
   background-color: #000a69 !important;
 }
@@ -40,37 +36,37 @@
 .text {
   color: #ffffff !important;
 }
-img,
-svg {
+.navbar, img
+ {
   vertical-align: middle;
   height: 46px;
 }
-.navbar-text a,
-.navbar-text a:focus,
-.navbar-text a {
+
+ .navbar-text a
+{
   color: #f66e11;
+  cursor: pointer;
+}
+ .navbar-text a:hover
+{
+  text-decoration: underline pink;
   cursor: pointer;
 }
 
 /*---------------------Banner-----------*/
 
-Col {
-  padding: 127px;
-}
-p {
+
+.Banner, p {
   width: 100%;
   color: #f66e11;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  height: 36px;
   margin: 5px 2px;
 }
-.h2,
-h2 {
+
+.Banner ,h2 {
   font-size: 2rem;
   color: #000a69;
 }
-h1 {
+.Banner, h1 {
   font-size: 2.5rem;
   color: #959595;
   width: 100%;
@@ -79,83 +75,21 @@ h1 {
   margin: -3px 0px;
   line-height: 24px;
 }
-.firstimage {
-  width: 181px;
-  height: 182px;
-  margin: 1px -138px;
-}
-.secondimage {
-  width: 520.75px;
-  height: 579px;
-}
-.thirdimage {
-  width: 394.9px;
-  height: 425px;
-}
 
-.txt-rotate > .wrap {
-  border-right: 0.08em solid #666;
-}
 
-.grid-container {
+.Banner,.grid-container {
   display: flex;
   justify-content: center;
   margin-top: 54px;
-  // display: grid;
-  // grid-template-columns: repeat(3, auto);
-  // grid-gap: 10px;
-  // position: relative;
+
 }
-
-// .grid-item {
-//   position: absolute;
-/*---*/
-// left: 246px;
-// }
-
-.item1 {
-  width: 408px;
+.Banner, .item1 {
+  width: 100%;
   height: 424px;
 }
 
-.item2 {
-  // width: 292px;
-  // top: 31px;
-  // left: 66px;
-  // height: 321px;
-
-  padding: 38px 18px;
-
-  margin-left: 245px;
-  width: 292px;
-
-  height: 321px;
-}
-
-.item3 {
-  padding: 0;
-  margin-top: 121px;
-
-  width: 261px;
-  height: 295px;
-
-  padding: 52px 28px;
-
-  // top: 141px;
-  // left: 423px;
-  // width: 261px;
-  // height: 295px;
-  // margin: 8px -207px;
-  // padding: 51px 28px;
-}
-// top: 153px;
-// left: 177px;
-// width: 261px;
-// height: 295px;
-// margin: 8px -207px;
-// padding: 51px 28px;
-
 /*---------------------About-----------*/
+
 .about {
   background: rgba(0, 10, 105, 0.0196078431);
   margin-top: 60px;
@@ -168,6 +102,11 @@ h1 {
   width: 100%;
   height: 400px;
 }
+.about-background-image-small {
+  width: 100%;
+  height: 234px;
+  display: none;
+}
 
 .about-section-container {
   padding: 50px;
@@ -179,217 +118,55 @@ h1 {
   z-index: 9999;
   position: relative;
 
-  -webkit-box-shadow: 10px 2px 69px -1px rgba(191, 191, 191, 0.59);
-  -moz-box-shadow: 10px 2px 69px -1px rgba(191, 191, 191, 0.59);
-  box-shadow: 10px 2px 69px -1px rgba(191, 191, 191, 0.59);
+  
+}
+.about, h6{
+  color: #000A69;
 }
 
 @media (max-width: 768px) {
   .about-section-container {
+    padding: 0px;
     width: 100%;
+    margin-top: 0px !important;
+   
   }
 
-  .about{
-    padding:0px
+  .about {
+    padding: 0px;
+  }
+
+  .about-background-image {
+    display: none;
+  }
+
+  .about-background-image-small {
+    display: block;
   }
 }
 
-.centerOne {
-  width: 1520px;
-  height: 537px;
-  opacity: 0px;
-}
-.centerThree {
-  width: 944px;
-  height: 482px;
-
-  gap: 0px;
-  opacity: 0px;
-}
-Col {
-  margin: 1px 73px;
-}
-
-.grid-container1 {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 10px;
-  position: relative;
-  margin-left: 100px;
-  align-items: center;
-  top: -663px;
-  left: -60px;
-}
-
-.grid-item {
-  position: relative;
-}
-.aboutsection {
-  top: 23px;
-}
-
-.image1 {
-  width: 993px;
-  height: 364px;
-  gap: 0px;
-  opacity: 0px;
-  top: 807px;
-  left: 77px;
-}
-
-.image2 {
-  width: 682px;
-  height: 362px;
-  gap: 0px;
-  opacity: 0px;
-  top: 376px;
-  left: 389px;
-}
-
-.Col,
-.aboutsection {
-  background: #ffffff;
-  left: 76px;
-  top: 516px;
-  // this
-  width: 100%;
-  height: 448px;
-  position: relative;
-  left: -618px;
-}
-.Col,
-.aboutsection h2 {
-  color: #000a69;
-}
-.Container {
-  top: 23px;
-}
-.aboutlogo {
-  padding-top: 5px;
-  margin-top: 17px;
-  height: 57px;
-}
-h10 {
-  position: relative;
-  top: 16px;
-  color: #000a69;
-  font-style: bold;
-  font: Poppins;
-  line-height: 48px;
-}
-.about {
-  left: 23px;
-}
 /*---------Footer----------*/
-
-.footer {
-  background: #f66e11;
+footer {
+  background:#F66E11;
   color: white;
-  padding: 30px 0;
-  position: relative;
-  top: 252px;
+  padding: 0px 0;
 }
-
-.footer-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
-  justify-content: center;
-}
-
-.footer-item {
-  text-align: center;
-  color: #f4f4f4;
-}
-
-.footer-item h3 {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-  color: #ffffff;
-}
-
-.footer-item ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-item ul li {
-  margin-bottom: 5px;
-}
-
-.footer-item ul li a {
+.footer-bottom {
+  background: #000A69;
   color: white;
+  padding: 10px 0;
+}
+
+
+.footer a {
+  
   text-decoration: none;
 }
 
-.footer-item ul li a:hover {
-  text-decoration: underline;
-}
-p2 {
-  color: #f4f4f4;
-
-  width: 23px;
-  height: 2px;
-}
-
-.footersecond {
-  background: #000a69;
-  color: white;
-  padding: 30px 0;
-  position: relative;
-  top: 252px;
-  height: 31px;
-}
-
-.footer-contentscore {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
-  justify-content: center;
-}
-
-.footer-itemtwo {
-  text-align: left;
-  color: #f4f4f4;
-  margin-left: 85px;
-}
-
-.footer-itemtwo h3 {
-  font-size: 1.2em;
-  margin-bottom: 10px;
+.footer a:hover {
   color: #ffffff;
-}
-
-.footer-item ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-item ul li {
-  margin-bottom: 5px;
-}
-
-.footer-item ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-.footer-item ul li a:hover {
   text-decoration: underline;
 }
-p2 {
-  color: #f4f4f4;
 
-  width: 23px;
-  height: 2px;
-}
-.copyright {
-  margin-left: -168px;
-  height: 16.67px;
-  width: 16.67px;
-}
-.h4,
-h4 {
-  font-size: 0.9rem;
-  height: 19px;
-}
+
+
